chore(pom): #8 refactor POM to distribute surefire argument on each module
This avoid to have unknown package on some module
This allow to have config nearest the module